style.css
body {
	font-size: 11pt;
	/* font-family: Arial,sans-serif; */
}

fieldset div {
	padding: 2px;
}

/* Fixed-position, top-right corner summary of Unbudeted and Unspent totals */
#budget-totals-top {
	position: fixed;
	top: 10px;
	right: 5px;
	z-index: 10;
	background-color: white;
	padding: 2px;
	font-weight: bold;
	box-shadow:  -2px 2px 6px #000000;
}

table.total-table-top {
	border-spacing:  8px;	
}

table.total-table-top td {
	padding: 5px 5px 5px 5px;
}

.green-shadow {
	box-shadow: 0 0 5px #00FF00;
}

.all-green {
	color: white;
	box-shadow: 0 0 5px #148B14;
	background-color: #148B14;
}

.red-shadow {
	color: white;
	font-weight: bold;  /* easier to read */
	box-shadow: 0 0 5px #FF0000;
	background-color: #FF0000;
}

tr.odd {
	/* Light Green */
	background-color: #BCE2BC;
}

tr.even {
	/* Pale yellow */
	background-color: #F2F8D9;
}

tr.todo {
	/* Light red */
	background-color: #FF8888;
}

tr.exclude-budget {
	/* Bright yellow */
	background-color: #F4FE50;
}

.memo {
	width: 200px;
}

.long-text {
	width: 250px;
	resize: both;
}

#body-div {

}

/* Hidden transaction form div */
#tx-form {
	/* margin: auto; */
	padding: 15px;
	border: 2px solid black;
	position: absolute;  /* absolute allows overlay but scrolls w/ main page. */
	/* overflow-y: scroll; */
	top: 140px;
	left: 100px;
	/* max-height: 600px; */
	background-color: #FAFCD8;
	z-index: 10;
	display: none;
}

#tx-form h3 {
	margin-top: 0px;
}

label {
	padding-left: 15px;
	padding-right: 6px;
}

label.lhs {
	padding-left: 0px;
	width: 90px;
	display: inline-block;
	vertical-align: top;
}

.numeric {
	text-align: right;
}

.total {
	text-align: right;
	font-weight: bold;
}

tr.padded-row td {
	padding-top: 5px;
	padding-right: 25px;
}

input {
	font-size: 9pt;
}

button {
	font-size: 9pt;
}

a
{
	font-size: 10pt;
	font-family: Arial, sans-serif;
	color: #222299;
	text-decoration: none;
}

a:active
{
	color: #FF2222;
}

a:hover
{
	background-color: #FFFF99;
}

a:focus
{
	color: #FF2222;
}

h3
{
	font-family: Arial, sans-serif;
}

th
{
	color: #5555CC;
	text-align: left;
	padding: 2px;
	border-bottom: 1px solid black;
}

.negative {
	color: red;
}

.error
{
	color: red;
	width: 600px;
	font-weight: bold;
	padding-bottom: 10px;
}


.message
{
	color: orange;
	font-weight: bold;
	width: 500px;
	padding-bottom:  5px;
}

.currency
{
	text-align: right;
}

.indented-block
{
	margin-left: 50px;
	width: 400px;
}

div.bottom
{
	padding-left: 50px;
	padding-top: 10px;
}

.fixed-width
{
	font-family: Courier New;
}

.info
{
	float: right;
	text-align: right;
	font-style: italic;
	color: #DD5555;
}


table.trans-table
{
	border: 1px solid black;
	margin-top: 8px;
	margin-bottom: 5px;
}
table.trans-table tr
{
	/* background-color: #EEEEFF; */

}
table.trans-table td
{
	padding-right: 8px;
	vertical-align: top;
}

table.summary-form td
{
	padding-right: 6px;
}

table.summary-list
{
	margin-left: 20px;
	border: 1px solid black;
}
table.summary-list td
{
	padding-right: 10px;
	padding-left: 10px;
	vertical-align: top;
}
table.summary-list th
{
	padding-right: 5px;
	padding-left: 5px;
}

table.budget-list
{
	margin-left: 10px;
	border: 1px solid black;
}
table.budget-list td
{
	padding-right: 5px;
	padding-left: 5px;
}
table.budget-list th
{
	padding-right: 5px;
	padding-left: 5px;
}
table.budget-list td input[type="number"]
{
	text-align: right;
	width: 75px;
}

tr.income-header th {
	padding-top: 10px;
}

table.transaction
{
	border-left: 1px solid black;
	border-right: 1px solid black;
	border-top: 1px solid black;
}

ul.nav-list {
	list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    border-bottom: 1px solid black;
}

.nav-list li {
	float: left;
}

li a, .drop-button {
    display: inline-block;
    text-align: center;
    padding: 5px 16px;
    text-decoration: none;
}

li a:hover, .dropdown:hover .drop-button {
	background-color: #BCE2BC;
}

.active-reports {
	background-color: #BCE2BC;
}

li.dropdown {
	display: inline-block;
}

.drop-button {

}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
	background-color: #f1f1f1;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.active-nav {
	font-weight: bold;
}


table.navbar
{
	border-bottom: 1px solid black;
	/* background-color: #CADDEC; */
}

table.navbar tr
{

}

table.navbar td
{
	padding-left: 10px;
	padding-right: 10px;
/*	font-weight: bold;	*/

}

